# EframeOverlay

./: Cargo.toml  README.md
InputBot/src/windows/: mod.rs
eframe/: Cargo.toml
eframe/src/: epi.rs
eframe/src/native/: epi_integration.rs  run.rs
egui-winit/: Cargo.toml
egui-winit/src/: lib.rs  window_settings.rs
src/: app.rs  helper.txt  hotkeymanager.rs  main.rs  main_window.rs
src/gui/: mod.rs
src/gui/components/: app.rs  background_mode.rs  edit_mode.rs  hotkeymanager.rs  mod.rs  setup.rs
winit/src/: window.rs
winit/src/platform_impl/windows/: window.rs
