[package]
name = "RustyPoe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = {path = "egui"}
# eframe = { path = "eframe", features = ["persistence"] }
eframe = { path = "eframe"}
winit = "0.26.1"
enigo = "0.0.14"
rev_lines = "0.2.1"
inputbot = { path = "inputbot"}
clipboard = "0.5.0"
mki_fork = "0.2.1"
winput = "0.2.5"
pistoncore-input = "1.0.1"
strum = "0.24"
strum_macros = "0.24"
winapi = { version = "0.3.9", features = ["winuser"] }
reqwest = {version = "0.11.10", features = ["blocking"]}
bytes = "1.1.0"
image = "0.24.2"
windows-win = "2.4.1"
load_image = "2"


[replace]
"winit:0.26.1" = { path = "winit" }
